# duo_The_Observer

./: .env  README.md  Speech-To-Text.py  download.py  log.py  pyproject.toml  wacher.py
docs/: ARCHITECTURE.md  LIVE_TESTING.md  MIGRATION.md
scripts/legacy/: download.py  log.py  speech_to_text.py  wacher.py
src/duo_observer/: __init__.py  cli.py  client.py  config.py  handlers.py
src/duo_observer/services/: __init__.py  live_probe.py  media.py
src/duo_the_observer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_capture_audio_cli.py  test_config.py  test_handlers.py  test_live_probe.py  test_media.py  test_utils.py
tests/integration/: test_comment_pipeline.py  test_connection_flow.py
tests/legacy/: test_speech_to_text.py
tests/live/: test_rtvenoticias_smoke.py
